--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "express": "^4.17.1",
     "pug": "^2.0.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.19.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
