--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "nodemon": "^1.19.1"
   },
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,7 +19,7 @@
     "url": "git+https://github.com/lewrerh/Project6.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Rhonda",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/lewrerh/Project6/issues"
